--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,10 +2,13 @@
 
 <%= form_for :user, url: '/users' do |f| %>
 
-  First name: <%= f.text_field :first_name %>
-  Last name: <%= f.text_field :last_name %>
   Email: <%= f.text_field :email %>
   Password: <%= f.password_field :password %>
+  First name: <%= f.text_field :first_name %>
+  Last name: <%= f.text_field :last_name %>
+  Prefer not to disclose<span><%= f.radio_button :gender, "not_telling" %>
+  Male<span><%= f.radio_button :gender, "male" %>
+  Female<span><%= f.radio_button :gender, "female" %>
   <%= f.submit "Submit" %>
 
 <% end %>
