--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,10 @@
 <h1><%=@user.first_name%> <%=@user.last_name%></h1>
 <p>0 followers | 0 following</p>
 <p><%=@user.description%></p>
-<%=@user.avatar%>
+
+<%if @user.avatar?%>
+    <%=image_tag @user.avatar.thumb.url%>
+<%end%>
 
 <br>
 ------------
