--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,11 @@
 <p>0 followers | 0 following</p>
 <p><%=@user.description%></p>
 
-<%if @user.avatar?%>
+<% if @user.avatar.url.present?%>
     <%=image_tag @user.avatar.thumb.url%>
+<% else %>
+	<img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
 <%end%>
-
 <br>
 ------------
 <br>
