--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <% if current_user %>
     Signed in as <%= current_user.first_name %> | <%= link_to "Logout", '/logout' %>
   <% else %>
-    <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+    <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %> | <%= link_to "Sign in with Google", "/auth/google_oauth2?prompt=select_account" %>
   <% end %>
 
   <% if flash[:notice] %>
