create & show board-working

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,4 @@
 <br>
 ------------
 <br>
-buttons for -- boards | <a href="pins">Pins</a> | topics
+buttons for -- <a href="boards">Boards</a> | <a href="pins">Pins</a> | topics
