add pin to board, show pin in board-working

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,2 +1,7 @@
 <%=@board.title%><br>
-<%=@board.description%>
+<%=@board.description%><br>
+
+
+<%@board.pins.each do |x|%>
+    <%=image_tag x.image.url%>
+<%end%>
