--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,3 +1,5 @@
+<a href="/pins/<%=@pin.id%>/add_to_board">Save to board</a>
+
 <%=@pin.title%><br>
 <%=@pin.description%><br>
 <%=image_tag @pin.image.url%>
