--- a/app/views/users/pins.html.erb
+++ b/app/views/users/pins.html.erb
@@ -1,5 +1,7 @@
-<a href="/pins/new">Create a new Pin</a>
+<%=link_to "New Pin", pins_new_path, id:"new_link", remote: true%>
 <br>
+<div id="user_pins">
 <%@pin.each do |x|%>
     <%=image_tag x.image.url%>
-<%end%> 
+<%end%>
+</div>
