delete pin&board works, boards with pins & pins added to boards can be deleted-no issue

--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -4,5 +4,6 @@
 <div id="user-boards">
     <%@board.each do |x|%>
         <a href="/boards/<%=x.id%>"><%=x.title%></a>
+        <a href="/boards/<%=x.id%>/destroy">Delete Board</a><br>
     <%end%>
 </div>
