delete/edit board & pin done - all working

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,1 +1,4 @@
+
 <a href="/boards/<%=@board.id%>"><%=@board.title%></a>
+<a href="/boards/<%=@board.id%>/edit">Edit</a>
+<a href="/boards/<%=@board.id%>/destroy", data-confirm="Are you sure?">Delete</a><br>
