--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -4,6 +4,8 @@
 <div id="user-boards">
     <%@board.each do |x|%>
         <a href="/boards/<%=x.id%>"><%=x.title%></a>
-        <a href="/boards/<%=x.id%>/destroy">Delete Board</a><br>
+        <a href="/boards/<%=x.id%>/edit">Edit</a>
+        <a href="/boards/<%=x.id%>/destroy", data-confirm="Are you sure?">Delete</a><br>
     <%end%>
 </div>
+
