--- a/app/views/boards/create.js.erb
+++ b/app/views/boards/create.js.erb
@@ -1,3 +1,3 @@
 $('#board-form').hide();
 $('#new_board_link').show();
-$('#user_boards').append('<%= j render(@board)%>');
+$('#user-boards').append('<%= j render(@board)%>');
