--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,2 +1,3 @@
 <%=image_tag @pin.image.url%>
-<a href="/pins/<%=@pin.id%>/destroy">Delete Pin</a>
+<a href="/pins/<%=@pin.id%>/edit">Edit</a>
+<a href="/pins/<%=@pin.id%>/destroy", data-confirm="Are you sure?">Delete Pin</a>
