added migration tag & taggings. Adding tags to pins & displaying tags, working

--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -4,6 +4,7 @@
     *Image: <%= f.file_field :image, :required => 'required' %>
     *Title: <%= f.text_field :title %>
     Description: <%= f.text_area :description %>
+    Tags (separated by comma): <%= f.text_area :tag_list %>
     <%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.submit "Submit" %>
   
