--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -3,3 +3,5 @@
 <%=@pin.title%><br>
 <%=@pin.description%><br>
 <%=image_tag @pin.image.url%>
+
+<%= raw @pin.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %>
