--- a/app/views/users/pins.html.erb
+++ b/app/views/users/pins.html.erb
@@ -5,7 +5,7 @@
     <%@pin.each do |x|%>
         <%=image_tag x.image.url%>
         <a href="/pins/<%=x.id%>/edit">Edit</a>
-        <a href="/pins/<%=x.id%>/destroy", data-confirm="Are you sure?">Delete Pin</a>
+        <a href="/pins/<%=x.id%>/destroy", data-confirm="Are you sure?">Delete</a>
         
     <%end%>
 </div>
