--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -6,6 +6,7 @@
 
     Title: <%= f.text_field :title %>
     Description: <%= f.text_area :description %>
+    Tags (separated by comma): <%= f.text_area :tag_list %>
     <%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.submit "Submit" %>
   
