explore page can view all tags, click on tags can view all pictures under same tag

--- a/app/views/home/explore.html.erb
+++ b/app/views/home/explore.html.erb
@@ -1,3 +1,8 @@
+<%@tag.each do |x|%>
+    <a href="/explore/<%=x.name%>"><%=x.name%></a>
+<%end%>
+
+<br>
 
 <%@tagging.each do |x|%>
     <%@pin.where(id: x.pin_id).each do |y|%>
