--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
             </li>
             <% if current_user %>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Explore</a>
+                    <a class="nav-link" href="/explore">Explore</a>
                 </li>
                 <%if current_user.avatar?%>
                     <li class="nav-item">
