--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,5 @@
 	<img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
 <%end%>
 <br>
-------------
 <br>
-buttons for -- <a href="boards">Boards</a> | <a href="pins">Pins</a> | topics
+<a href="boards">Boards</a> | <a href="pins">Pins</a> | <a href="#">Topics</a>
