--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,15 @@
     <a href="/pins/<%=x.id%>"><%=image_tag x.image.url%></a>
 <%end%>
 
+<script>
+$( function() {
+  var availableTags = [
+    "<%@tag.each do |x|%>",
+    "<%=x.name%>",
+    "<%end%>",
+  ];
+  $( "#alltags" ).autocomplete({
+    source: availableTags
+  });
+} );
+</script>
