--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/2000px-Pok%C3%A9_Ball_icon.svg.png" width="50" height="50" alt="">
         </a>
         <%=form_tag(tags_path, :method => 'get', id: "search-form", class:"form-inline") do%>
-            <input id="tags"<%=text_field_tag :search, params[:search], placeholder: "Search Tags", class:"form-control mr-sm-2"%>
+            <input id="alltags"<%=text_field_tag :search, params[:search], placeholder: "Search Tags", class:"form-control mr-sm-2"%>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         <%end%>
     </nav>
