user can follow/unfollower another user, follow/follower count shows on profile page

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,4 +1,5 @@
 <a href="/pins/<%=@pin.id%>/add_to_board">Save to board</a>
+Uploader: <a href="/users/<%=@user.id%>"><%=@user.first_name%></a>
 
 <%=@pin.title%><br>
 <%=@pin.description%><br>
