follower/following page created, current_user can view follower/following

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,5 +1,10 @@
 <a href="/pins/<%=@pin.id%>/add_to_board">Save to board</a>
-Uploader: <a href="/users/<%=@user.id%>"><%=@user.first_name%></a>
+Uploader: 
+<%if current_user.id == @user.id%>
+    <a href="/users/show"><%=@user.first_name%></a>
+<%else%>
+    <a href="/users/<%=@user.id%>"><%=@user.first_name%></a>
+<%end%>
 
 <%=@pin.title%><br>
 <%=@pin.description%><br>
