updated explore page to show images of latest taggings & fixed route error -get users/:id => users#view moved to bottom

--- a/app/views/home/explore.html.erb
+++ b/app/views/home/explore.html.erb
@@ -3,9 +3,14 @@
 <%end%>
 
 <br>
-
-<%@tagging.each do |x|%>
-    <%@pin.where(id: x.pin_id).each do |y|%>
-        <%=image_tag y.image.url%>
+<%if@tagging.present?%>
+    <%@tagging.each do |x|%>
+        <%@pin.where(id: x.pin_id).each do |y|%>
+            <%=image_tag y.image.url%>
+        <%end%>
     <%end%>
+<%else%>
+
+    <%=image_tag @pin.find(@taggings.last.pin_id).image.url%>
+
 <%end%>
