added bootstrap table to pins/show page

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,4 +2,7 @@
     <%=image_tag current_user.avatar.small_thumb.url%>
 <%end%>
 <%=current_user.first_name%><br>
-<%=@comment.comment%><br><br>
+<%=@comment.comment%><br>
+<%if current_user%>
+    <a href="">Delete</a>
+<%end%>
