--- a/app/views/boards/list.html.erb
+++ b/app/views/boards/list.html.erb
@@ -1,18 +1,25 @@
-add to boards page<br>
+<h1>Save to Board</h1>
 
 <%=link_to "New Board", boards_new2_path, id:"new_board_link2", remote: true%>
 
-<div id="user-boards2">
-    <%if @board.exists?%>
-        <%@board.each do |x|%>
-            <%=x.title%>
-
-            <%= form_for :group do |f| %>
-                <%= f.hidden_field :board_id, :value => x.id %>
-                <%= f.hidden_field :pin_id, :value => @pin.id %>
-                <%= f.submit "Add to Board" %>
-            <% end %>
-            
+<div class="container">
+    <div id="user-boards2" class="row">
+        <%if @board.exists?%>
+            <%@board.each do |x|%>
+                <div class="card" style="margin: 10px;">
+                    <div class="card-body">
+                        <h5 class="card-title"><%=x.title%></h5>
+                        <p class="card-text"><%=x.pins.count%> Pins</p>
+                        <%= form_for :group do |f| %>
+                            <%= f.hidden_field :board_id, :value => x.id %>
+                            <%= f.hidden_field :pin_id, :value => @pin.id %>
+                            <class="btn btn-primary"><%= f.submit "Save" %></a>
+                        <% end %>
+                    </div>
+                </div>
+            <%end%>
         <%end%>
-    <%end%>
+    </div>
 </div>
+
+<a href="/pins/<%=params[:id]%>">Back</a>
