user can delete own comments

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -49,7 +49,7 @@
                         <%end%>
                         <%=x.comment%>
                         <%if current_user.id == y.id%>
-                            | <a href="">Delete</a>
+                            | <a href="/comments/<%=x.id%>/destroy">Delete</a>
                         <%end%>
                         <br> -------------- <br>
                     <%end%>
