--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
 <%@pin.each do |x|%>
-    <a href="/pins/<%=x.id%>"><%=image_tag x.image.url%></a>
+    <a href="/pins/<%=x.id%>"><%=image_tag x.image_url(:display)%></a>
 <%end%>
 
 <script>
