--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,5 +1,5 @@
 <div id="pin-form">
-  <%= form_for :pin, url: '/pins/new', id:"pin-form", remote: true do |f| %>
+  <%= form_for :pin, url: '/pins/new', id:"pin-form" do |f| %>
 
     *Image: <%= f.file_field :image, :required => 'required' %>
     *Title: <%= f.text_field :title %>
