--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <%if current_user.avatar?%>
-    <%=image_tag current_user.avatar.small_thumb.url%>
+    <%=image_tag current_user.avatar_url(:small_thumb)%>
 <%end%>
 <%=current_user.first_name%><br>
 <%=@comment.comment%><br>
