--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
                 </li>
                 <%if current_user.avatar?%>
                     <li class="nav-item">
-                        <a class="d-inline-block align-top" href="#"><%=image_tag current_user.avatar.small_thumb.url%></a>
+                        <a class="d-inline-block align-top" href="#"><%=image_tag current_user.avatar_url(:small_thumb)%></a>
                     </li>
                 <%end%>
                 <%if current_user.first_name?%>
