--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,6 +1,6 @@
 
 <%@tagging.each do |x|%>
     <%@pin.where(id: x.pin_id).each do |y|%>
-        <%=image_tag y.image.url%>
+        <%=image_tag y.image_url(:display)%>
     <%end%>
 <%end%>
