--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -3,7 +3,7 @@
     <%current_user.followers.each do |x|%>
         <a href="/users/<%=x.id%>"><%=x.first_name%></a>
         <% if x.avatar.url.present?%>
-            <%=image_tag x.avatar.thumb.url%>
+            <%=image_tag x.avatar_url(:thumb)%>
         <% else %>
             <img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
         <%end%>
