--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <p><%=@user.description%></p>
 
 <% if @user.avatar.url.present?%>
-    <%=image_tag @user.avatar.thumb.url%>
+    <%=image_tag @user.avatar_url(:thumb)%>
 <% else %>
 	<img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
 <%end%>
