--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,3 +11,5 @@
 <br>
 <a href="/users/edit">Edit Profile</a><br>
 <a href="boards">Boards</a> | <a href="pins">Pins</a> | <a href="#">Topics</a>
+<br><br>
+<a href="/">Back</a>
