--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,12 +1,20 @@
 <%if current_user.all_following.present?%>
-    <%current_user.all_following.each do |x|%>
-        <a href="/users/<%=x.id%>"><%=x.first_name%></a>
-        <% if x.avatar.url.present?%>
-            <%=image_tag x.avatar_url(:thumb)%>
-        <% else %>
-            <img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
-        <%end%>
-    <%end%>
+    <div class="container">
+        <div class="row">
+            <%current_user.all_following.each do |x|%>
+                <div class="card" style="margin: 10px;">
+                    <div class="card-body">
+                        <% if x.avatar.url.present?%>
+                            <%=image_tag x.avatar_url(:thumb)%>
+                        <% else %>
+                            <img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
+                        <%end%>
+                        <h5 class="card-title, text-center""><a href="/users/<%=x.id%>"><%=x.first_name%></a></h5>
+                    </div>
+                </div>
+            <%end%>
+        </div>
+    </div>
 <%else%>
     <p>You are not following any users yet</p>
 <%end%>
