--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,17 @@
 <h1>Signup!</h1>
+<br>
 
-<%= form_for :user, url: '/users' do |f| %>
-
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  First name: <%= f.text_field :first_name %>
-  Last name: <%= f.text_field :last_name %>
-  Prefer not to disclose<span><%= f.radio_button :gender, "not_telling" %>
-  Male<span><%= f.radio_button :gender, "male" %>
-  Female<span><%= f.radio_button :gender, "female" %>
-  <%= f.submit "Submit" %>
-
-<% end %>
+<div class="form-group col-md-4">
+  <%= form_for :user, url: '/users' do |f| %>
+    Email: <%= f.text_field :email, class: 'form-control' %>
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small><br>
+    Password: <%= f.password_field :password, class: 'form-control' %><br>
+    First name: <%= f.text_field :first_name, class: 'form-control' %><br>
+    Last name: <%= f.text_field :last_name, class: 'form-control' %><br>
+    Gender:<br>
+    <%= f.radio_button :gender, "not_telling" %><span> Prefer not to disclose<br>
+    <%= f.radio_button :gender, "male" %><span> Male<br>
+    <%= f.radio_button :gender, "female" %><span> Female<br><br>
+    <%= f.submit "Submit", class:"btn btn-primary" %>
+  <% end %>
+</div>
