--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/2000px-Pok%C3%A9_Ball_icon.svg.png" width="50" height="50" alt="">
         </a>
         <%=form_tag(tags_path, :method => 'get', id: "search-form", class:"form-inline") do%>
@@ -22,7 +22,7 @@
                 </li>
                 <%if current_user.avatar?%>
                     <li class="nav-item">
-                        <a class="d-inline-block align-top" href="#"><%=image_tag current_user.avatar_url(:small_thumb)%></a>
+                        <a class="d-inline-block align-top" href="/users/show"><%=image_tag current_user.avatar_url(:small_thumb)%></a>
                     </li>
                 <%end%>
                 <%if current_user.first_name?%>
