--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,10 @@
 <%if current_user.avatar?%>
     <%=image_tag current_user.avatar_url(:small_thumb)%>
+<%else%>
+    <img src="http://res.cloudinary.com/puiyoke/image/upload/w_50,c_scale/v1527590348/default_avatar.png">
 <%end%>
 <%=current_user.first_name%><br>
-<%=@comment.comment%><br>
+<%=@comment.comment%> | 
 <%if current_user%>
     <a href="/comments/<%=@comment.id%>/destroy", data-confirm="Are you sure?">Delete</a>
 <%end%>
