--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,6 +23,8 @@
                 <%if current_user.avatar?%>
                     <li class="nav-item">
                         <a class="d-inline-block align-top" href="/users/show"><%=image_tag current_user.avatar_url(:small_thumb)%></a>
+                <%else%>
+                        <a class="d-inline-block align-top" href="/users/show"><img src= "http://res.cloudinary.com/puiyoke/image/upload/w_50,c_scale/v1527590348/default_avatar.png"></a>
                     </li>
                 <%end%>
                 <%if current_user.first_name?%>
