--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -7,7 +7,7 @@
                         <% if x.avatar.url.present?%>
                             <%=image_tag x.avatar_url(:thumb)%>
                         <% else %>
-                            <img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
+                            <img src="http://res.cloudinary.com/puiyoke/image/upload/w_150,c_scale/v1527590348/default_avatar.png">
                         <%end%>
                         <h5 class="card-title, text-center""><a href="/users/<%=x.id%>"><%=x.first_name%></a></h5>
                     </div>
