--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -1,11 +1,13 @@
-<h1><%=@user.first_name%> <%=@user.last_name%></h1>
+<h1>User Profile</h1>
+
+<h3><%=@user.first_name%> <%=@user.last_name%></h3>
 <p><%=@user.followers_count%> followers | <%=@user.follow_count%> following</p>
 <p><%=@user.description%></p>
 
 <% if @user.avatar.url.present?%>
     <%=image_tag @user.avatar_url(:thumb)%>
 <% else %>
-	<img src="https://s3.amazonaws.com/pinpinpinbucket/default_avatar.png">
+	<img src="http://res.cloudinary.com/puiyoke/image/upload/w_150,c_scale/v1527590348/default_avatar.png">
 <%end%>
 
 <div>
