--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,13 +1,15 @@
 <h1>Edit Pin!</h1>
-
+<br>
 <%=image_tag @pin.image_url(:display)%>
 
-<%= form_for :pin do |f| %>
+<div class="form-group col-md-4">
+    <%= form_for :pin do |f| %>
 
-    Title: <%= f.text_field :title %>
-    Description: <%= f.text_area :description %>
-    Tags (separated by comma): <%= f.text_area :tag_list %>
-    <%= f.hidden_field :user_id, :value => current_user.id %>
-    <%= f.submit "Submit" %>
-  
-<% end %>
+        Title: <%= f.text_field :title, class: 'form-control' %><br>
+        Description: <%= f.text_area :description, class: 'form-control' %><br>
+        Tags (separated by comma): <%= f.text_area :tag_list, class: 'form-control' %><br>
+        <%= f.hidden_field :user_id, :value => current_user.id %>
+        <%= f.submit "Submit", class:"btn btn-primary" %>
+    
+    <% end %>
+</div>
