--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Signup!</h1>
 <br>
 
-<div class="form-group col-md-4">
+<div id="signup_form", class="form-group col-md-4">
   <%= form_for :user, url: '/users' do |f| %>
     Email: <%= f.text_field :email, class: 'form-control' %>
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small><br>
