updated tags page view, added other user can view uploaded pins by specific user, everything tested

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,3 +1,5 @@
+<a href="/users/boards">Back</a><br>
+
 <h1><%=@board.title%></h1>
 <h6><%=@board.description%></h6>
 
@@ -11,4 +13,5 @@
     <%end%>
   </div>
 </div>
+
 
