--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
     </button>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="/">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/2000px-Pok%C3%A9_Ball_icon.svg.png" width="50" height="50" alt="">
+            <img src="http://res.cloudinary.com/puiyoke/image/upload/c_scale,w_50/v1527676165/pin.png">
         </a>
         <%=form_tag(tags_path, :method => 'get', id: "search-form", class:"form-inline") do%>
             <input id="alltags"<%=text_field_tag :search, params[:search], placeholder: "Search Tags", class:"form-control mr-sm-2"%>
