--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,6 +1,17 @@
-
-<%@tagging.each do |x|%>
-    <%@pin.where(id: x.pin_id).each do |y|%>
-        <%=image_tag y.image_url(:display)%>
-    <%end%>
+<%@tag.each do |x|%>
+    Tag: <%=x.name%>
 <%end%>
+<br>
+<div class="container">
+  <div class="card-columns">
+    <%@tagging.each do |x|%>
+        <%@pin.where(id: x.pin_id).each do |y|%>
+            <%if y.image.present?%>
+                <div class="card">
+                <a href="/pins/<%=y.id%>"><%= image_tag(y.image_url(:display), :class => "card-img") %></a>
+                </div>
+            <%end%> 
+        <%end%>
+    <%end%>
+  </div>
+</div>
