--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -17,3 +17,16 @@
         <%=button_to "Follow", {action: 'follow', id: @user.id}, method: 'post', remote: true%>
     <%end%>
 </div>
+
+<br>
+<div class="container">
+    <div class="card-columns">
+        <%@user.pins.each do |x|%>
+            <%if x.image.present?%>
+                <div class="card">
+                    <a href="/pins/<%=x.id%>"><%= image_tag(x.image_url(:display), :class => "card-img") %></a>
+                </div>
+            <%end%>
+        <%end%>
+    </div>
+</div>
