removed topics button

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,6 @@
 <br>
 <br>
 <a href="/users/edit">Edit Profile</a><br>
-<a href="boards">Boards</a> | <a href="pins">Pins</a> | <a href="#">Topics</a>
+<a href="boards">Boards</a> | <a href="pins">Pins</a>
 <br><br>
 <a href="/">Back</a>
